# crowdsec-distributed-allowlist

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  release.yml  trigger-build.yml
examples/: agent-config.json  agent-config.parma.template.json  docker-compose.agent.yml  docker-compose.server.yml  safe-ip-agent.service  server-config.json  server-config.parma.template.json
src/crowdsec_distributed_allowlist/: __init__.py  __main__.py  agent.py  auth.py  cli.py  crowdsec.py  ipcheck.py  server.py  state.py
substrate/traces/operations/: 2026-07-08-implement-crowdsec-distributed-allowlist-v1.md
substrate/traces/plans/: 2026-07-08-crowdsec-distributed-allowlist-v1.md
substrate/traces/reviews/: 2026-07-08-initial-security-gate.md
tests/: test_agent.py  test_auth.py  test_crowdsec.py  test_ipcheck.py  test_server.py
