[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdsec-distributed-allowlist"
version = "0.1.0"
description = "Distributed dynamic IP allowlist for CrowdSec via mesh VPN agents"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DigItalyGo SRL SB"},
]
readme = "README.md"
keywords = ["crowdsec", "allowlist", "vpn", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

[project.scripts]
crowdsec-distributed-allowlist = "crowdsec_distributed_allowlist.cli:main"

[project.urls]
Homepage = "https://github.com/digitalygo/crowdsec-distributed-allowlist"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["crowdsec_distributed_allowlist"]
